# pubmed-fetcher

./: README.md
pubmed_fetchers/: pyproject.toml
pubmed_fetchers/pubmed_fetcher/: __main__.py  fetcher.py
pubmed_fetchers/tests/: test_fetcher.py
